--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    font-family: Roboto, Helvetica, sans-serif;
+  }
+  
+.face-snap-card {
+    display: flex;
+    align-items: space-between;
+    border-radius: 10px;
+    box-shadow: 8px 8px 13px 1px rgba(0, 0, 0, 0.1);;
+    width: 800px;
+    height: 300px;
+
+    .img-container {
+        width: 40%;
+        height: 100%;
+        border-radius: 10px 0 0 10px;
+        img {
+            border-radius: 10px 0 0 10px;
+            height: 100%;
+          }
+    }
+
+    .content-container {
+        width: 90%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        
+        * {
+            margin-left: 20px;
+        }
+    }
+    
+}
