Added a button to like or dislike. Modification of the onAddSnap() => onAddOrRemoveSnap() method to only be able to like once or unlike once.

--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -7,6 +7,9 @@
         <h2>{{ title }}</h2>
         <p>Mis en ligne le {{ createdDate }}</p>
         <p>{{ description }}</p>
-        <p>🤌 {{ snaps }}</p>
+        <p>
+            <button class="addRmvSnap" (click)="onAddOrRemoveSnap()">{{btnContent}}</button>
+            🤌 {{ snaps }}
+        </p>
     </section>
   </div>
