--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,5 +31,13 @@
             margin-left: 20px;
         }
     }
+
+    .addRmvSnap {
+        min-width: 110px;
+        background-color: #629ee7;
+        border: none;
+        border-radius: 4px;
+        padding: 10px 0;
+    }
     
 }
