--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-face-snap></app-face-snap>
+<section class="container-cards">
+    <app-face-snap [FaceSnap]="mySnap"></app-face-snap>
+    <app-face-snap [FaceSnap]="myOtherSnap"></app-face-snap>
+    <app-face-snap [FaceSnap]="myLastSnap"></app-face-snap>
+</section>
