--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,8 +7,9 @@
     align-items: space-between;
     border-radius: 10px;
     box-shadow: 8px 8px 13px 1px rgba(0, 0, 0, 0.1);;
-    width: 800px;
+    width: 700px;
     height: 300px;
+    margin: 10px;
 
     .img-container {
         width: 40%;
@@ -17,6 +18,7 @@
         img {
             border-radius: 10px 0 0 10px;
             height: 100%;
+            width: 300px;
           }
     }
 
@@ -28,7 +30,7 @@
         justify-content: space-around;
         
         * {
-            margin-left: 20px;
+            margin-left: 30px;
         }
     }
 
@@ -38,6 +40,12 @@
         border: none;
         border-radius: 4px;
         padding: 10px 0;
+        align-items: baseline;
     }
     
+}
+
+.container-cards {
+    display: flex;
+    flex-wrap: wrap;
 }
