Remove constructor at face-snap.model.ts add new property at face-snap.model.ts : location (optionnal) add *ngIf for location at face-snap-component.html

--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -7,6 +7,7 @@
         <h2>{{ FaceSnap.title }}</h2>
         <p>Mis en ligne le {{ FaceSnap.createdDate }}</p>
         <p>{{ FaceSnap.description }}</p>
+        <p *ngIf="FaceSnap.location">Cette photo à été prise à {{FaceSnap.location}}</p>
         <p>
             <button class="addRmvSnap" (click)="onAddOrRemoveSnap()">{{btnContent}}</button>
             🤌 {{ FaceSnap.snaps }}
