Remove 'myOtherSnap' and 'myLastSnap' at faceSnap.component.ts and faceSnap.component.html in app.component.ts, modify datas of faceSnap to an array FaceSnap[] add an  at app.component.html.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<section class="container-cards">
-    <app-face-snap [FaceSnap]="mySnap"></app-face-snap>
-    <app-face-snap [FaceSnap]="myOtherSnap"></app-face-snap>
-    <app-face-snap [FaceSnap]="myLastSnap"></app-face-snap>
-</section>
+
+    <app-face-snap *ngFor="let faceSnapElement of faceSnaps" [faceSnap]="faceSnapElement"></app-face-snap>
