--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -10,7 +10,10 @@
         <p *ngIf="faceSnap.location">Cette photo à été prise à {{faceSnap.location}}</p>
         <p>
             <button class="addRmvSnap" (click)="onAddOrRemoveSnap()">{{btnContent}}</button>
-            🤌 {{ faceSnap.snaps }}
+            🤌
+            <span [ngStyle]="{ color: 'rgb(0, ' + faceSnap.snaps + ' , 0)' }"> {{ faceSnap.snaps }}</span>
+            <span *ngIf="faceSnap.snaps >= 255" [ngStyle]="{borderBottom: '1px solid orange'}">🔥</span>
+            
         </p>
     </section>
   </div>
