--- a/src/app/face-snap/face-snap.component.scss
+++ b/src/app/face-snap/face-snap.component.scss
@@ -10,7 +10,7 @@
 
     img {
     width: 100%;
-}
+    }
     .content-container {
         width: 90%;
         height: 100%;
@@ -34,6 +34,18 @@
             transform: translate(1px, 1px);
         }
     }
+
+    .snapped {
+        background-color: #dd7777;
+        min-width: 110px;
+        border: none;
+        border-radius: 4px;
+        padding: 10px 0;
+        align-items: baseline;
+        &:active {
+            transform: translate(1px, 1px);
+        }
+      }
     
 }
 
