using dataPipe to format the snaps' upload date. app.module.ts : import LOCALE_ID, registerLocaleData and all of fr language. Creation of Constructor with a parameter registerLocaleData(fr.default)

--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,3 +1,4 @@
+
 <div class="face-snap-card">
     
         <img [src]="faceSnap.imgUrl" [alt]="faceSnap.title">
@@ -5,7 +6,7 @@
 
     <section class="content-container">
         <h2>{{ faceSnap.title | titlecase }}</h2>
-        <p>Mis en ligne le {{ faceSnap.createdDate }}</p>
+        <p>Mis en ligne le {{ faceSnap.createdDate | date: "d MMMM yyyy à HH:mm" }}</p>
         <p>{{ faceSnap.description | lowercase }}</p>
         <p *ngIf="faceSnap.location">Cette photo à été prise à {{faceSnap.location | uppercase}}</p>
         <p>
