--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,8 +1,6 @@
 
 <div class="face-snap-card">
-    
         <img [src]="faceSnap.imgUrl" [alt]="faceSnap.title">
-    
 
     <section class="content-container">
         <h2>{{ faceSnap.title | titlecase }}</h2>
@@ -12,9 +10,8 @@
         <p>
             <button class="addRmvSnap" [ngClass]="{snapped: btnContent === 'Oops unsnap !'}" (click)="onAddOrRemoveSnap()">{{btnContent}}</button>
             🤌
-            <span [ngStyle]="{ color: 'rgb(0, ' + faceSnap.snaps + ' , 0)' }"> {{ faceSnap.snaps }}</span>
+            <span [ngStyle]="{ color: 'rgb(0, ' + faceSnap.snaps + ' , 0)' }"> {{ faceSnap.snaps | number }}</span>
             <span *ngIf="faceSnap.snaps >= 255" [ngStyle]="{borderBottom: '1px solid orange'}">🔥</span>
-            
         </p>
     </section>
   </div>
