--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-
-    <app-face-snap *ngFor="let faceSnapElement of faceSnaps" [faceSnap]="faceSnapElement"></app-face-snap>
+<app-header></app-header>
+<app-snap-face-list></app-snap-face-list>
