--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,3 +6,17 @@ header {
     background-color: #629ee7;
     color: white;
   }
+
+  a {
+    margin: 0 10px;
+    color: white;
+    text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+  
+  .active {
+    color: #e8cd33;
+    text-decoration: underline;
+  }
