--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,17 @@ body {
     margin: 0;
     padding: 0;
 }
+
+
+button {
+    min-width: 110px;
+    background-color: #629ee7;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 0;
+    align-items: baseline;
+    padding: 10px 10px;
+    &:active {
+        transform: translate(1px, 1px);
+    }
+}
